--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
 
     - name: Log in to PWS
       run: ./cf login -a api.run.pivotal.io -u ${{ secrets.CF_USERNAME }} -p ${{ secrets.CF_PASSWORD }} -o "Black Girls Code" -s seattle
+      if: "false"
       
     - name: Deploy app
       run: ./cf push
+      if: "false"
